--- a/index.html
+++ b/index.html
@@ -1,37 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width initial sclae=1">
-	<title>Module-2 Assignment</title>
-	<link rel="stylesheet" type="text/css" href="boot/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="grid-styling.css">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" type="text/css" href="module 2 soln.css">
+	<title>Module 2 Solution</title>
 </head>
-
 <body>
-	<div class="heading">Our Menu</div>
- <div class="grid-container">
- <div class="row">
-   <div class="col-md-3">
-   	  	<h1 class="heading1">Chicken</h1>
-   	   	  asd ad asd asdsand asudassdk sa nsa dsain sakn isan das nsan isandisand sand ksan isa asnkjasnjasasfbsa aidhahdwhdj sabdcyvc cjabciua cnakj aiuasncjacabiuakc ai asicasncajs iashi ashd asd isahdandkan isahdi as ioa osai asdn iasnd ua a da asdh oiahioash doiash dasdh ias iah ahd ash asd ais haisdihd ia sdiasdiadias doia oisadh oai shdasdaknk.nisfankxni hoia oisa oiashd asduaskdnaksn laknajcb asiu a;sncan cjbliu
-   </div>
-
-   <div class="col-md-3">
-   	  <h1 class="heading2">Chawmn</h1>
-   	  asd ad asd asdsand asudassdk sa nsa dsain sakn isan das nsan isandisand sand ksan isa asnkjasnjasasfbsa aidhahdwhdj sabdcyvc cjabciua cnakj aiuasncjacabiuakc ai asicasncajs iashi ashd asd isahdandkan isahdi as ioa osai asdn iasnd ua a da asdh oiahioash doiash dasdh ias iah ahd ash asd ais haisdihd ia sdiasdiadias doia oisadh oai shdasdaknk.nisfankxni hoia oisa oiashd asduaskdnaksn laknajcb asiu a;sncan cjbliu
-   </div>
-
-   <div class="col-md-4">
-         <h1 class="heading3">Samosa</h1>
-         asd ad asd asdsand asudassdk sa nsa dsain sakn isan das nsan isandisand sand ksan isa asnkjasnjasasfbsa aidhahdwhdj sabdcyvc cjabciua cnakj aiuasncjacabiuakc ai asicasncajs iashi ashd asd isahdandkan isahdi as ioa osai asdn iasnd ua a da asdh oiahioash doiash dasdh ias iah ahd ash asd ais haisdihd ia sdiasdiadias doia oisadh oai shdasdaknk.nisfankxni hoia oisa oiashd asduaskdnaksn laknajcb asiu a;sncan cjbliu
-   </div>
- </div>
-</div>
-
-<script src="boot/js/jquery-3.5.1.min.js"></script>
-<script src="boot/js/bootstrap.main.js"></script>
-<script src="boot/js/script.js"></script>
+	<h1>Our Menu</h1>
+	<div class="row">
+	<div class="container col-lg-4 col-md-6 col-sm-12">
+		<section>
+		<div id="chicken">
+			Chicken
+		</div>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+		</p>
+		</section>
+	</div>
+	<div class="container col-lg-4 col-md-6 col-sm-12">
+		<section>
+		<div id="beef">
+			Beef
+		</div>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+		</p>
+		</section>
+	</div>
+	<div class="container col-lg-4 col-md-12 col-sm-12">
+		<section>
+		<div id="sushi">
+			Sushi
+		</div>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+		</p>
+		</section>
+	</div>
+	</div>
 </body>
 </html>
